# milkyway

./: CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
debian/: changelog  control  copyright  rules
docs/: DISTRIBUTION.md  GIT_AND_RELEASE_GUIDE.md  INSTALL_COMPLETE.md  SATURN.md
milkyway/: __init__.py  shell.py
milkyway/cli/: main.py
milkyway/cli/planets/: earth.py  jupiter.py  mars.py  mercury.py  neptune.py  pluto.py  titan.py  uranus.py  venus.py  vulcan.py
milkyway/core/: challenge_manager.py
milkyway/data/wordlists/: common.txt
milkyway_v1.2/: pyproject.toml
milkyway_v1.2/docs/: INSTALL.md
milkyway_v1.2/milkyway/: shell.py
milkyway_v1.2/milkyway/cli/: main.py
milkyway_v1.2/milkyway/cli/planets/: __init__.py  mercury.py  neptune.py  pluto.py  titan.py  uranus.py  vulcan.py
milkyway_v1.2/milkyway/core/: __init__.py  db.py
milkyway_v1.2/milkyway/data/wordlists/: common.txt
milkyway_v1.2/milkyway/tui/: __init__.py  app.py
milkyway_v1.2/tests/: __init__.py  test_mercury_earth_jupiter.py  test_saturn.py  test_venus.py
scripts/: git_workflow.sh  install.sh  publish_pypi.sh  setup_apt_repo.sh
test-milkyway/: pyvenv.cfg
tests/: test_core.py
